<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background_iv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/background"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background_for_buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cubes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cubes_button_text"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        style="@style/myButtonStyle"
        app:layout_constraintEnd_toStartOf="@id/history_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/background_iv"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/history_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_button_text"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        style="@style/myButtonStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cubes_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/background_iv"/>

    <TextView
        android:id="@+id/attention_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attention_text"
        android:textSize="18sp"
        android:visibility="gone"
        style="@style/myTextViewStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/background_iv"
        app:layout_constraintBottom_toTopOf="@id/item_dice" />

    <ru.nesterov.diceroller.app.presentation.custom.ItemDiceView
        android:id="@+id/item_dice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:diceWidth="300dp"
        app:diceHeight="300dp"
        app:diceImage="@drawable/dice20_empty"
        app:layout_constraintBottom_toTopOf="@id/dice_list_rv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/background_iv"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dice_list_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        tools:listitem="@layout/item_unselected_dice"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintBottom_toTopOf="@id/rolls_et_layout" />

    <Button
        android:id="@+id/increment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/increment_button_text"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        app:layout_constraintTop_toTopOf="@id/rolls_et_layout"
        app:layout_constraintBottom_toBottomOf="@id/rolls_et_layout"
        app:layout_constraintStart_toEndOf="@id/rolls_et_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/rolls_et_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dice_list_rv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rolls_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="3"
            android:singleLine="true"
            android:lines="1"
            android:ellipsize="end"
            android:inputType="number"
            android:textColor="@color/black"
            android:textSize="70sp"
            android:text="@string/initial_value_counter" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/decrement_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decrement_button_text"
        android:textSize="50sp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/rolls_et_layout"
        app:layout_constraintBottom_toBottomOf="@id/rolls_et_layout"
        app:layout_constraintEnd_toStartOf="@id/rolls_et_layout" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="525dp" />

</androidx.constraintlayout.widget.ConstraintLayout>