<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/your_cubes"
        style="@style/myTextViewStyle"
        app:layout_constraintBottom_toTopOf="@+id/cubes_recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cubes_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="350dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="3"
        app:layout_constraintHeight_max="350dp"
        app:layout_constraintBottom_toTopOf="@+id/cancel_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text_view"
        tools:listitem="@layout/item_cubes" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minWidth="200dp"
        android:text="@string/cancel_button"
        android:layout_margin="10dp"
        style="@style/myButtonStyle"
        app:layout_constraintWidth_max="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cubes_recycler_view"
        app:layout_constraintEnd_toStartOf="@id/apply_button"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/apply_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minWidth="200dp"
        android:text="@string/apply_button"
        android:layout_margin="10dp"
        style="@style/myButtonStyle"
        app:layout_constraintWidth_max="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cubes_recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancel_button" />

</androidx.constraintlayout.widget.ConstraintLayout>