<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="3dp"
    app:cardCornerRadius="15dp"
    card_view:cardBackgroundColor="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ru.nesterov.diceroller.app.presentation.custom.ItemDiceView
            android:id="@+id/dice_item_dice_view"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="10dp"
            android:layout_marginStart="8dp"
            app:diceHeight="75dp"
            app:diceWidth="75dp"
            app:diceImage="@drawable/dice20_empty"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/number_of_throws_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/poppins_regular"
            android:paddingStart="20dp"
            android:paddingTop="7dp"
            android:paddingEnd="30dp"
            android:paddingBottom="5dp"
            android:text="@string/your_result"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/result_text_view"
            app:layout_constraintEnd_toEndOf="@+id/result_text_view"
            app:layout_constraintStart_toEndOf="@id/dice_item_dice_view"
            app:layout_constraintTop_toTopOf="@id/dice_item_dice_view" />

    <TextView
        android:id="@+id/id_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/standard_value"
        android:textSize="11sp"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/result_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_result_card"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintStart_toEndOf="@id/dice_item_dice_view"
            app:layout_constraintTop_toBottomOf="@id/number_of_throws_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>